--- a/README
+++ b/README
@@ -103,4 +103,8 @@ ToDo:
     
     *  Add a thumbnail generator
     
+    *  Add PNG option, or better yet, detection
+    
     *  Finish ToDo list
+    
+    
