Sprite.create_thumbnails added, and it seemed prudent to delete old images.

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 django-sprites is a Django app with two bundled models that handle 
-Sprites and their associated SpriteItems.  
+Sprites and their associated SpriteItems.
+-----------
 
     * A Sprite is a combined image, consisting of one or more 
       SpriteItems, each of which is an image intended to be used as an 
@@ -20,6 +21,7 @@ Sprites and their associated SpriteItems.
       inside.
 
 Requirements:
+-----------
 
     *  PIL, with libjpeg support
     
@@ -30,7 +32,8 @@ Requirements:
     *  urllib2
     
 Setup:
-    
+-----------
+
     *  pip install django-sprites
 
     *  Add to your settings.py INSTALLED_APPS:
@@ -57,6 +60,9 @@ Setup:
         
         These default to 'sprites' and 'sprite_items', respectively.
     
+Usage:
+-----------
+    
     *  Bulk load images into a sprite by calling:
           
           sprite=Sprite.create_from_urls(['http://path.to/first.jpg',
@@ -71,17 +77,36 @@ Setup:
               pass
     
     *  SpriteItem properties
-           spriteitem.style - outputs CSS style directives, without 
+          - spriteitem.style - outputs CSS style directives, without 
             specifying it with a selector
             i.e.: "display:block; background: url(whatever); etc.;"
            
-           spriteitem.css - outputs the same style directives, with a 
+          - spriteitem.css - outputs the same style directives, with a 
             selector based on spriteitem.css_id
             i.e.: "#myimage {display:block; etc.;}"
            
-           spriteitem.tag_with_style - ouputs a safe-marked (ready to 
+          - spriteitem.tag_with_style - ouputs a safe-marked (ready to 
             use in a template) HTML span tag with embedded style attrib,
             including any internal HTML given by spriteitem.internal_html
+            
+          - spriteitem.thumbnail - If created, this is a OneToOne that 
+            links to another SpriteItem, which by convention (but not 
+            as a requirement) is a thumbnail of spriteitem.
+           
+          - spriteitem.make_thumbnail(width=64,height=64) - return a 
+            PIL.Image copy of spriteitem.image of size width,height.  
+            Aspect ratio is preserved, so size may not match exactly.
+            
+            This is used by sprite.create_thumbnails(width,height), 
+            which generates new spriteitems, associates those 
+            spriteitems with those of sprite as their thumbnails, and 
+            returns the newly created sprite.
+            
+          - spriteitem.sprite.build() should be called after making 
+            changes to a sprite.  The methods internal to this app handle
+            this sanely, but if you make changes you'll have to determine
+            when and how often to re-build your sprites.  I'd suggest 
+            building a set of sprites to build first, so you don't 
     
     *  Middleware
            Adding 'sprites.middleware.SpriteReplaceByClass', to 
@@ -118,13 +143,8 @@ Setup:
         SpriteItem attached to the Sprite to set the format.
 
 
-ToDo:  
-
-    *  Add a thumbnail generator, like 
-        thumbsprite=sprite.generate_thumbnails(height,width)#-> Sprite()
-        class ThumbSpriteItem(SpriteItem):
-            spriteitem=models.OneToOneField(SpriteItem)
-        thumbspriteitem == spriteitem.thumbspriteitem
+ToDo:
+-----------
     
     *  Make it split up by image format, maybe.  Mixing JPEGs into a 
        sprite detected as GIF looks atrocious.
